# theater

./: db.sqlite3  entrypoint.sh  pyproject.toml
static/css/: spectacles.css  styles.css
templates/: base.html
templates/services/: detail.html  home.html  my_tickets.html  spectacles.html
theater/: settings.py
